# otpauth-rs

./: .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: CI.yml
base32/: all.html  enum.Alphabet.html  fn.decode.html  fn.encode.html  index.html  sidebar-items.js
otpauth/: all.html  index.html  sidebar-items.js  struct.HOTP.html  struct.TOTP.html
otpauth/hotp/: struct.HOTP.html
otpauth/totp/: struct.TOTP.html
ring/: all.html  index.html  macro.test_file.html  sidebar-items.js
ring/aead/: constant.MAX_TAG_LEN.html  constant.NONCE_LEN.html  index.html  sidebar-items.js  static.AES_128_GCM.html  static.AES_256_GCM.html  static.CHACHA20_POLY1305.html  struct.Aad.html  struct.Algorithm.html  struct.LessSafeKey.html  struct.Nonce.html  struct.OpeningKey.html  struct.SealingKey.html  struct.Tag.html  struct.UnboundKey.html  trait.BoundKey.html  trait.NonceSequence.html
ring/agreement/: fn.agree_ephemeral.html  index.html  sidebar-items.js  static.ECDH_P256.html  static.ECDH_P384.html  static.X25519.html  struct.Algorithm.html  struct.EphemeralPrivateKey.html  struct.PublicKey.html  struct.UnparsedPublicKey.html
spin/: all.html  index.html  sidebar-items.js  struct.Mutex.html  struct.MutexGuard.html  struct.Once.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockWriteGuard.html
src/: hotp.rs  lib.rs  totp.rs
tests/: lib.rs
untrusted/: all.html  fn.read_all_optional.html  index.html  struct.EndOfInput.html  struct.Input.html  struct.Mark.html  struct.Reader.html
(+227 files in other folders)
