[package]
authors = ["messense <messense@icloud.com>"]
description = "Two-step verification of HOTP/TOTP for Rust"
documentation = "https://messense.github.io/otpauth-rs"
homepage = "https://github.com/messense/otpauth-rs"
keywords = ["otp", "auth", "password"]
license = "MIT"
name = "otpauth"
readme = "README.md"
repository = "https://github.com/messense/otpauth-rs"
version = "0.4.1"
edition = "2018"

[dependencies]
base32 = "0.4.0"
byteorder = "1.3.2"
ring = "0.16.5"

[features]
unstable = []
