[package]
authors = ["messense <messense@icloud.com>"]
description = "Two-step verification of HOTP/TOTP for Rust"
documentation = "https://messense.github.io/otpauth-rs"
homepage = "https://github.com/messense/otpauth-rs"
keywords = ["otp", "auth", "password"]
license = "MIT"
name = "otpauth"
readme = "README.md"
repository = "https://github.com/messense/otpauth-rs"
version = "0.5.0"
edition = "2021"

[dependencies]
base32 = "0.5.1"
ring = "0.17.8"
